--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
    <link href="css/style.css" rel="stylesheet">   
    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
    <script defer src="js/script.js"></script>
-   
+
    <title>Fixxo.</title>
   </head>
 <body>
    
-   <section>
+   <header class="__gradient-gray">
       <nav class="__navbar container">
-         <div class="container"></div>
-         <div class="logo">
+         <div class="__logo">
             Fixxo.
          </div>
          <div class="__nav-links">
@@ -27,14 +26,31 @@
             <a href="#">Contacts</a>
          </div>
          <div class="__nav-icon-links">
-            <a href="#" class="white-circle"><i class="fa-regular fa-magnifying-glass"></i></a>
-            <a href="#" class="white-circle"><i class="fa-regular fa-repeat"></i></a>
-            <a href="#" class="white-circle"><i class="fa-regular fa-heart"></i></a>
-            <a href="#" class="white-circle"><i class="fa-regular fa-bag-shopping"></i></a>
+            <a href="#">
+               <i class="fa-regular fa-magnifying-glass"></i>
+            </a>
+            <a href="#">
+               <i class="fa-regular fa-repeat"></i>
+            </a>
+            <a href="#">
+               <span class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-theme">1</span>
+               <i class="fa-regular fa-heart"></i>
+            </a>
+            <a href="#">
+               <span class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-theme">3</span>
+               <i class="fa-regular fa-bag-shopping"></i>
+            </a>
          </div>
       </nav>
-   </section>
-   
-   
+
+      <section class="__showcase">
+         <img src="Images/img-2.svg" alt="img-2">
+         <div>
+
+         </div>
+         <img src="Images/img-1.svg" alt="img-1">
+      </section>
+   </header>
+      
 </body>
 </html>
