--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
 <body>
    
-   <header class="__gradient-gray">
-      <nav class="__navbar container">
-         <div class="__logo">
+   <header class="__gradient-gray container border">
+      <nav class="__navbar container border">
+         <div class="__logo container border">
             Fixxo.
          </div>
          <div class="__nav-links">
@@ -43,10 +43,12 @@
          </div>
       </nav>
 
-      <section class="__showcase">
-         <img src="Images/img-2.svg" alt="img-2">
-         <div>
-
+      <section class="__showcase container border">
+         <img src="Images/img-2.svg" class="__img-left" alt="img-2">
+         <div class="__showcase-body">
+            <h1>Sale Up<br> To 50% Off</h1>
+            <p>Online shopping free home delivery over 100$</p>
+            <a href="#">SHop NOW</a>
          </div>
          <img src="Images/img-1.svg" alt="img-1">
       </section>
