--- a/index.html
+++ b/index.html
@@ -46,13 +46,20 @@
       <section class="__showcase container border">
          <img src="Images/img-2.svg" class="__img-left" alt="img-2">
          <div class="__showcase-body">
-            <h1>Sale Up<br> To 50% Off</h1>
-            <p>Online shopping free home delivery over 100$</p>
-            <a href="#">SHop NOW</a>
+            <h1>Sale Up</h1>
+            <h1>To 50% Off</h1>
+            <p>Online shopping free home delivery over $100</p>
+            <a class="__btn-theme" href="#">
+               <div class="__btn-theme-left"></div>
+               SHop NOW
+               <div class="__btn-theme-right"></div>
+            </a>
          </div>
          <img src="Images/img-1.svg" alt="img-1">
       </section>
    </header>
+
+   <div style="height: 5000px;"></div>
       
 </body>
 </html>
