--- a/index.html
+++ b/index.html
@@ -60,13 +60,18 @@
 
    </header>
 
-   <section class="__feature products container border">
+   <section class="__featured products">
       <div class="containder">
          <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                <div class="card">
                   <div class="img">
-                     <img src="" alt="">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <a class="__btn-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        SHOP NOW
+                     </a>
                   </div>
                   <div class="card-body">
                      <p class="card-category">Category</p>
