--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
             <p>Online shopping free home delivery over $100</p>
             <a class="__btn-theme" href="#">
                <div class="__btn-theme-left"></div>
-               SHop NOW
-               <div class="__btn-theme-right"></div>
+               <div class="__btn-theme-right"></div>               
+               Shop NOW
             </a>
          </div>
          <img src="Images/img-1.svg" alt="img-1" class="__img-right" alt="showcase-img-1">
       </section>
-
    </header>
-
    <section class="__featured products">
       <div class="containder">
          <div class="row row-cols-1 row-cols-md-4 g-4">
@@ -67,11 +65,26 @@
                <div class="card">
                   <div class="img">
                      <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div>
+                        <a href="#">
+                           <span class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-theme">1</span>
+                           <i class="fa-regular fa-heart"></i>
+                           <i class="fa-regular fa-repeat"></i>
+                        </a>
+                        <a href="#">
+
+                        </a>
+                        <a href="#">
+                           <span class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-theme">3</span>
+                           <i class="fa-regular fa-bag-shopping"></i>
+                        </a>
+                     </div>
                      <a class="__btn-theme" href="#">
                         <span class="__btn-theme-left"></span>
                         <span class="__btn-theme-right"></span>
-                        SHOP NOW
+                        QUICK VIEW
                      </a>
+                  
                   </div>
                   <div class="card-body">
                      <p class="card-category">Category</p>
@@ -83,7 +96,6 @@
                         <i class="fa-sharp fa-solid fa-star"></i>
                         <i class="fa-sharp fa-solid fa-star"></i>
                         <i class="fa-sharp fa-solid fa-star"></i>
-                        
                      </p>
                      <p class="card-price">$10.00</p>
                   </div>
