feature border löst

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
    <title>Fixxo.</title>
 </head>
 <body>
-   <section>
-   <header class="__gradient-gray container border">
-      <nav class="__navbar container border">
-         <div class="__logo container border">
+
+   <header class="__gradient-gray container">
+      <nav class="__navbar container">
+         <div class="__logo">
             Fixxo.
          </div>
          <div class="__nav-links">
@@ -28,14 +28,14 @@
          <div class="__nav-icon-links">
             <a href="#"><i class="fa-regular fa-magnifying-glass"></i></a>
             <a href="#"><i class="fa-regular fa-repeat"></i></a>
-            <a href="#"><span class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-theme">1</span><i class="fa-regular fa-heart"></i></a>
-            <a href="#"><span class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-theme">3</span><i class="fa-regular fa-bag-shopping"></i></a>
+            <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">1</span><i class="fa-regular fa-heart"></i></a>
+            <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">3</span><i class="fa-regular fa-bag-shopping"></i></a>
          </div>
       </nav>
+   </div>
+   </header>
 
-   </header> 
-   </section>
-   <section class="__showcase container border">
+   <section class="__showcase">
       <img src="Images/img-2.svg" class="__img-left" alt="showcase-img-2">
       <div class="__showcase-body">
          <h1>Sale Up</h1>
@@ -47,14 +47,13 @@
             Shop NOW
          </a>
       </div>
-      <img src="Images/img-1.svg" alt="img-1" class="__img-right" alt="showcase-img-1">
+      <img src="Images/img-1.svg" class="__img-right" alt="showcase-img-1">
    </section>
   
-   <section class="__featured products">
-      <div class="container">
-         <div class="row row-cols-1 row-cols-md-2 g-4">
+   <section class="__featured products">Feature
+      <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-               <div class="card">
+               <div class="card h-100">
                   <div class="img">
                      <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
                      <div class="card-menu">
