--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
          </div>
       </nav>
    </div>
-   </header>
-
    <section class="__showcase">
       <img src="Images/img-2.svg" class="__img-left" alt="showcase-img-2">
       <div class="__showcase-body">
@@ -48,23 +46,22 @@
          </a>
       </div>
       <img src="Images/img-1.svg" class="__img-right" alt="showcase-img-1">
-   </section>
+   </section>   
+   </header>
+
+
   
-   <section class="__featured products">Feature
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-               <div class="card h-100">
+      <section class="__featured-products container">Feature Products
+         <div class="container">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+               <div class="col">
+                  <div class="card">
                   <div class="img">
                      <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
-                     <div class="card-menu">
-                        <a href="#"><i class="fa-regular fa-heart"></i></a>
-                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
-                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>                        
-                     </div>
-                     <a class="__btn-theme btn-card-theme" href="#">
+                     <a class="__btn-theme" href="#">
                         <span class="__btn-theme-left"></span>
                         <span class="__btn-theme-right"></span>
-                        QUICK VIEW
+                        SHOP NOW
                      </a>
                   </div>
                   <div class="card-body">
@@ -77,42 +74,19 @@
                         <i class="fa-sharp fa-solid fa-star"></i>
                         <i class="fa-sharp fa-solid fa-star"></i>
                      </p>
-                     <p class="card-price">$10.00</p>
+                     <p class="card-price">$35.00</p>
                   </div>
-               </div>
-            </div>
-            <div class="col">
-               <div class="card">
-                  <div class="img">
-                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
-                     <div class="card-menu">
-                        <a href="#"><i class="fa-regular fa-heart"></i></a>
-                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
-                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>                        
-                     </div>
-                     <a class="__btn-theme btn-card-theme" href="#">
-                        <span class="__btn-theme-left"></span>
-                        <span class="__btn-theme-right"></span>
-                        QUICK VIEW
-                     </a>
-                  </div>
-                  <div class="card-body">
-                     <p class="card-category">Category</p>
-                     <h5 class="card-title">Modern Black Blouse</h5>
-                     <p class="card-rating">
-                        <i class="fa-sharp fa-solid fa-star"></i>
-                        <i class="fa-sharp fa-solid fa-star"></i>
-                        <i class="fa-sharp fa-solid fa-star"></i>
-                        <i class="fa-sharp fa-solid fa-star"></i>
-                        <i class="fa-sharp fa-solid fa-star"></i>
-                     </p>
-                     <p class="card-price">$10.00</p>
                   </div>
                </div>
             </div>
          </div>
-      </div>
-   </section>
+      </section>
+
+
+
+
+
+
 
 
    <section class="__banners container">
