--- a/index.html
+++ b/index.html
@@ -58,10 +58,218 @@
                   <div class="card">
                   <div class="img">
                      <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
-                     <a class="__btn-theme" href="#">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
                         <span class="__btn-theme-left"></span>
                         <span class="__btn-theme-right"></span>
-                        SHOP NOW
+                        QUICK VIEW
+                     </a>
+                  </div>
+                  <div class="card-body">
+                     <p class="card-category">Category</p>
+                     <h5 class="card-title">Modern Black Blouse</h5>
+                     <p class="card-rating">
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                     </p>
+                     <p class="card-price">$35.00</p>
+                  </div>
+                  </div>
+               </div>
+               <div class="col">
+                  <div class="card">
+                  <div class="img">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        QUICK VIEW
+                     </a>
+                  </div>
+                  <div class="card-body">
+                     <p class="card-category">Category</p>
+                     <h5 class="card-title">Modern Black Blouse</h5>
+                     <p class="card-rating">
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                     </p>
+                     <p class="card-price">$35.00</p>
+                  </div>
+                  </div>
+               </div>
+               <div class="col">
+                  <div class="card">
+                  <div class="img">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        QUICK VIEW
+                     </a>
+                  </div>
+                  <div class="card-body">
+                     <p class="card-category">Category</p>
+                     <h5 class="card-title">Modern Black Blouse</h5>
+                     <p class="card-rating">
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                     </p>
+                     <p class="card-price">$35.00</p>
+                  </div>
+                  </div>
+               </div>
+               <div class="col">
+                  <div class="card">
+                  <div class="img">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        QUICK VIEW
+                     </a>
+                  </div>
+                  <div class="card-body">
+                     <p class="card-category">Category</p>
+                     <h5 class="card-title">Modern Black Blouse</h5>
+                     <p class="card-rating">
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                     </p>
+                     <p class="card-price">$35.00</p>
+                  </div>
+                  </div>
+               </div>
+               <div class="col">
+                  <div class="card">
+                  <div class="img">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        QUICK VIEW
+                     </a>
+                  </div>
+                  <div class="card-body">
+                     <p class="card-category">Category</p>
+                     <h5 class="card-title">Modern Black Blouse</h5>
+                     <p class="card-rating">
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                     </p>
+                     <p class="card-price">$35.00</p>
+                  </div>
+                  </div>
+               </div>
+               <div class="col">
+                  <div class="card">
+                  <div class="img">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        QUICK VIEW
+                     </a>
+                  </div>
+                  <div class="card-body">
+                     <p class="card-category">Category</p>
+                     <h5 class="card-title">Modern Black Blouse</h5>
+                     <p class="card-rating">
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                     </p>
+                     <p class="card-price">$35.00</p>
+                  </div>
+                  </div>
+               </div>
+               <div class="col">
+                  <div class="card">
+                  <div class="img">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        QUICK VIEW
+                     </a>
+                  </div>
+                  <div class="card-body">
+                     <p class="card-category">Category</p>
+                     <h5 class="card-title">Modern Black Blouse</h5>
+                     <p class="card-rating">
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                     </p>
+                     <p class="card-price">$35.00</p>
+                  </div>
+                  </div>
+               </div>
+               <div class="col">
+                  <div class="card">
+                  <div class="img">
+                     <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                     <div class="card-menu">
+                        <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                     </div>
+                     <a class="__btn-theme btn-card-theme" href="#">
+                        <span class="__btn-theme-left"></span>
+                        <span class="__btn-theme-right"></span>
+                        QUICK VIEW
                      </a>
                   </div>
                   <div class="card-body">
