--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
       <img src="Images/img-1.svg" class="__img-right" alt="showcase-img-1">
    </section>   
    </header>
-
-
   
       <section class="__featured-products container">Feature Products
          <div class="container">
@@ -290,29 +288,28 @@
          </div>
       </section>
 
-
-
-
-
-
-
-
    <section class="__banners container">
       <img src="images/img-3.svg" alt="">
       <img src="images/img-4.svg" alt="">
    </section>
-   <section class="__flashsale-left container">
-      <div class="__flashsale-box"
 
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-         <div class="col">
-            <div class="card">
+   <section class="__flashsale-left container">
+      <div class="__flashsale-box">
+         <a class="__btn-theme" href="#">
+            <span class="__btn-theme-left"></span>
+            <span class="__btn-theme-right"></span>
+         </a>
+      </div>
+      <div>
+         <div class="row row-cols-1 row-cols-md-2 g-4" style="width: 30%;">
+            <div class="col">
+               <div class="card">
                <div class="img">
                   <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
                   <div class="card-menu">
-                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                      <a href="#"><i class="fa-regular fa-repeat"></i></a>
-                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>                        
+                     <a href="#"><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
                   </div>
                   <a class="__btn-theme btn-card-theme" href="#">
                      <span class="__btn-theme-left"></span>
@@ -330,18 +327,18 @@
                      <i class="fa-sharp fa-solid fa-star"></i>
                      <i class="fa-sharp fa-solid fa-star"></i>
                   </p>
-                  <p class="card-price">$10.00</p>
+                  <p class="card-price">$35.00</p>
+               </div>
                </div>
             </div>
-         </div>
-         <div class="col">
-            <div class="card">
+            <div class="col">
+               <div class="card">
                <div class="img">
                   <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
                   <div class="card-menu">
-                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                      <a href="#"><i class="fa-regular fa-repeat"></i></a>
-                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>                        
+                     <a href="#"><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
                   </div>
                   <a class="__btn-theme btn-card-theme" href="#">
                      <span class="__btn-theme-left"></span>
@@ -359,11 +356,71 @@
                      <i class="fa-sharp fa-solid fa-star"></i>
                      <i class="fa-sharp fa-solid fa-star"></i>
                   </p>
-                  <p class="card-price">$10.00</p>
+                  <p class="card-price">$35.00</p>
+               </div>
+               </div>
+            </div>            
+            <div class="col">
+               <div class="card">
+               <div class="img">
+                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                  <div class="card-menu">
+                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                     <a href="#"><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                  </div>
+                  <a class="__btn-theme btn-card-theme" href="#">
+                     <span class="__btn-theme-left"></span>
+                     <span class="__btn-theme-right"></span>
+                     QUICK VIEW
+                  </a>
+               </div>
+               <div class="card-body">
+                  <p class="card-category">Category</p>
+                  <h5 class="card-title">Modern Black Blouse</h5>
+                  <p class="card-rating">
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                  </p>
+                  <p class="card-price">$35.00</p>
+               </div>
+               </div>
+            </div>            
+            <div class="col">
+               <div class="card">
+               <div class="img">
+                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                  <div class="card-menu">
+                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                     <a href="#"><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                  </div>
+                  <a class="__btn-theme btn-card-theme" href="#">
+                     <span class="__btn-theme-left"></span>
+                     <span class="__btn-theme-right"></span>
+                     QUICK VIEW
+                  </a>
+               </div>
+               <div class="card-body">
+                  <p class="card-category">Category</p>
+                  <h5 class="card-title">Modern Black Blouse</h5>
+                  <p class="card-rating">
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                  </p>
+                  <p class="card-price">$35.00</p>
+               </div>
                </div>
             </div>
          </div>
       </div>
+   
    </section>
    
 
