--- a/index.html
+++ b/index.html
@@ -293,15 +293,104 @@
       <img src="images/img-4.svg" alt="">
    </section>
 
-   <section class="__flashsale-left container">
-      <div class="__flashsale-box">
+   <section class="__flashsales container">
+      <div class="__flashsales-box">
+         <h1 class="__flashsale-title">2 FOR $29 USD</h1>
          <a class="__btn-theme" href="#">
             <span class="__btn-theme-left"></span>
             <span class="__btn-theme-right"></span>
+            Flash Sale
          </a>
       </div>
       <div>
-         <div class="row row-cols-1 row-cols-md-2 g-4" style="width: 30%;">
+         <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 100%;">
+            <div class="col">
+               <div class="card">
+               <div class="img">
+                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                  <div class="card-menu">
+                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                     <a href="#"><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                  </div>
+                  <a class="__btn-theme btn-card-theme" href="#">
+                     <span class="__btn-theme-left"></span>
+                     <span class="__btn-theme-right"></span>
+                     QUICK VIEW
+                  </a>
+               </div>
+               <div class="card-body">
+                  <p class="card-category">Category</p>
+                  <h5 class="card-title">Modern Black Blouse</h5>
+                  <p class="card-rating">
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                  </p>
+                  <p class="card-price">$35.00</p>
+               </div>
+            </div>
+         </div>
+            <div class="col">
+               <div class="card">
+               <div class="img">
+                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                  <div class="card-menu">
+                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                     <a href="#"><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                  </div>
+                  <a class="__btn-theme btn-card-theme" href="#">
+                     <span class="__btn-theme-left"></span>
+                     <span class="__btn-theme-right"></span>
+                     QUICK VIEW
+                  </a>
+               </div>
+               <div class="card-body">
+                  <p class="card-category">Category</p>
+                  <h5 class="card-title">Modern Black Blouse</h5>
+                  <p class="card-rating">
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                  </p>
+                  <p class="card-price">$35.00</p>
+               </div>
+               </div>
+            </div>            
+            <div class="col">
+               <div class="card">
+               <div class="img">
+                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+                  <div class="card-menu">
+                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                     <a href="#"><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+                  </div>
+                  <a class="__btn-theme btn-card-theme" href="#">
+                     <span class="__btn-theme-left"></span>
+                     <span class="__btn-theme-right"></span>
+                     QUICK VIEW
+                  </a>
+               </div>
+               <div class="card-body">
+                  <p class="card-category">Category</p>
+                  <h5 class="card-title">Modern Black Blouse</h5>
+                  <p class="card-rating">
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                     <i class="fa-sharp fa-solid fa-star"></i>
+                  </p>
+                  <p class="card-price">$35.00</p>
+               </div>
+               </div>
+            </div>            
             <div class="col">
                <div class="card">
                <div class="img">
@@ -359,36 +448,7 @@
                   <p class="card-price">$35.00</p>
                </div>
                </div>
-            </div>            
-            <div class="col">
-               <div class="card">
-               <div class="img">
-                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
-                  <div class="card-menu">
-                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
-                     <a href="#"><i class="fa-regular fa-heart"></i></a>
-                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
-                  </div>
-                  <a class="__btn-theme btn-card-theme" href="#">
-                     <span class="__btn-theme-left"></span>
-                     <span class="__btn-theme-right"></span>
-                     QUICK VIEW
-                  </a>
-               </div>
-               <div class="card-body">
-                  <p class="card-category">Category</p>
-                  <h5 class="card-title">Modern Black Blouse</h5>
-                  <p class="card-rating">
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                  </p>
-                  <p class="card-price">$35.00</p>
-               </div>
-               </div>
-            </div>            
+            </div>
             <div class="col">
                <div class="card">
                <div class="img">
