--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,11 @@
              <input id="name" text="text">
              <input id="email" type="email">
              <textarea id="message"></textarea>
-             <button type="submit" class="__btn-theme">SEND</button>
+             <div>
+               <button type="submit" class="btn-theme">Post Comments</button>
+                  <span class="corner-topLeft"></span>
+                  <span class="corner-bottomRight"></span>
+             </div>
          </form>
       </div>
 
