--- a/contact.html
+++ b/contact.html
@@ -59,18 +59,18 @@
    <section class="contact-form">
       <div class="container">
          <h2>Come in contact with Us</h2>
-         <form>
+         <form novalidate>
             <div>
-               <input id="name" text="text" placeholder="Your name">
-               <div class="errorMessage">Your must enter a name</div>         
+               <input id="name" onkeyup="validate" text="text" placeholder="Your name">
+               <div id="nameErrorMessage" class="errorMessage"></div>         
             </div>
             <div>
                <input id="email" type="email" placeholder="Your email">
-               <div class="errorMessage">Your must enter an email</div>  
+               <div id="emailErrorMessage" class="errorMessage"></div>  
             </div>
             <div class="textarea">
-               <textarea id="message" placeholder="Comments"></textarea>
-               <div class="errorMessage">Your must enter a comment</div>                
+               <textarea id="comment" placeholder="Comments"></textarea>
+               <div id="commentErrorMessage" class="errorMessage"></div>                
             </div>
 
              <div>
